# scitex-config

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-config-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
src/scitex_config/_skills/scitex-config/: 02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_config/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
src/scitex_config/_sphinx_html/.doctrees/: api.doctree
src/scitex_config/_sphinx_html/.doctrees/api/: scitex_config.doctree
src/scitex_config/_sphinx_html/_modules/: index.html
src/scitex_config/_sphinx_html/_modules/scitex_config/: _PriorityConfig.html  _ScitexConfig.html  _paths.html
src/scitex_config/_sphinx_html/api/: scitex_config.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py
tests/scitex_config/: test__PriorityConfig.py  test__ScitexConfig.py  test__paths.py
tests/scitex_config/_ecosystem/: test__local_state.py
